--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -512,7 +512,7 @@
     <body>
         <div class="widthWrapper">
             <button id="Edit"></button>
-            <h1>Kink list</h1>
+            <h1>Consent List</h1>
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
                 <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
