--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -538,7 +538,7 @@
 * Death of your character
 
 #Mental 
-(General) 
+(General)
 * Alcohol Abuse/Addiction Issues
 * Amnesia/Memory Loss
 * Animalistic Behavior/Going "Feral"
@@ -607,6 +607,7 @@
 * Snakes
 * Spiders
 * Small/Enclosed Spaces
+* Voidsent
 
 #Disease & Health
 (General)
