--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -536,6 +536,7 @@
 * Permanent injury to your character
 * Romancing your character
 * Death of your character
+* Killing another character
 
 #Mental 
 (General)
