--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -544,6 +544,7 @@
 * Amnesia/Memory Loss
 * Animalistic Behavior/Going "Feral"
 * Anxiety/Panic Attacks
+* Coercion
 * Depression
 * Emotional Abuse
 * Gaslighting
@@ -571,6 +572,7 @@
 * Burning/Death by Fire
 * Cannibalism
 * Deep Water
+* Disease/Health
 * Dismemberment
 * Drowning
 * Doppelgangers/Being replaced with a copy
@@ -585,7 +587,6 @@
 * Non-Consensual Body Modification
 * Paralysis
 * Physical Abuse
-* Poison and the after-effects
 * Scarring
 * Sensory Loss (Sight, Hearing, Touch, Taste, Smell)
 * Sexual Abuse
@@ -602,8 +603,12 @@
 * Dolls/Puppets
 * Ghosts/Spirits
 * Harm to Animals
+* Magic (General)
+* Magic (Curses)
 * Necromancy/The Undead/Zombies
 * Needles / Pointed Objects
+* Poison/Venom (Short Term)
+* Poison/Venom (Long Term)
 * Rats
 * Snakes
 * Spiders
