--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -589,7 +589,9 @@
 * Physical Abuse
 * Scarring
 * Sensory Loss (Sight, Hearing, Touch, Taste, Smell)
-* Sexual Abuse
+* Sexual Abuse (Men)
+* Sexual Abuse (Women)
+* Sexual Abuse (Other)
 * Starvation
 * Suffocation
 * Tendon/Nerve Injuries
