--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -515,11 +515,11 @@
             <h1>Consent List</h1>
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
-                <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
-                <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">Like</span></div>
-                <div><span data-color="#FDFD6B" class="choice okay"></span> <span class="legend-text">Okay</span></div>
-                <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">Maybe</span></div>
-                <div><span data-color="#920000" class="choice no"></span> <span class="legend-text">No</span></div>
+                <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">I'm Okay With It</span></div>
+                <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">Hell Yeah, Let's Do It</span></div>
+                <div><span data-color="#FDFD6B" class="choice okay"></span> <span class="legend-text">Let's Be Careful/Negotiate</span></div>
+                <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">Fade To Black/OffScreen Okay</span></div>
+                <div><span data-color="#920000" class="choice no"></span> <span class="legend-text">Hard No</span></div>
             </div>
             <div id="ExportWrapper">
                 <input type="text" id="URL">
@@ -540,7 +540,6 @@
 
 #Mental 
 (General)
-* Alcohol Abuse/Addiction Issues
 * Amnesia/Memory Loss
 * Animalistic Behavior/Going "Feral"
 * Anxiety/Panic Attacks
@@ -619,6 +618,7 @@
 
 #Disease & Health
 (General)
+* Alcohol Abuse/Addiction Issues                
 * Autoimmune diseases (General)/Chronic Disease
 * Cancer or similar diseases
 * Necrosis/Rotting Flesh
