--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -551,6 +551,7 @@
 * Amnesia/Memory Loss
 * Animalistic Behavior/Going "Feral"
 * Anxiety/Panic Attacks
+* Brainwashing
 * Coercion
 * Depression
 * Emotional Abuse
