--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -172,7 +172,7 @@
                     left: 160px;
                 }
                 .legend div {
-                    width: 200px;
+                      width: max-content;
                 }
                 #ExportWrapper {
                     position: absolute;
@@ -185,7 +185,7 @@
             }
             @media (max-width: 1700px) and (min-width: 800px) {
                 .legend div {
-                    width: 200px;
+                      width: max-content;
                     padding-bottom: 10px;
                 }
                 #ExportWrapper {
@@ -196,7 +196,8 @@
             }
             @media (max-width: 800px) and (min-width: 598px) {
                 .legend div {
-                    width: 200px;
+                      width: max-content;
+                    <!--width: 200px;-->
                     padding-bottom: 10px;
                     padding-left: 10px;
                 }
@@ -225,7 +226,7 @@
                     min-width: 345px;
                 }
                 .legend div {
-                    width: 200px;
+                      width: max-content;
                     padding-bottom: 10px;
                     padding-left: 10px;
                 }
