--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -173,6 +173,8 @@
                 }
                 .legend div {
                       width: max-content;
+                    padding-left: 10px; 
+                    padding-right: 10px;
                 }
                 #ExportWrapper {
                     position: absolute;
@@ -187,6 +189,8 @@
                 .legend div {
                       width: max-content;
                     padding-bottom: 10px;
+                      padding-left: 10px; 
+                    padding-right: 10px;
                 }
                 #ExportWrapper {
                     position: absolute;
@@ -199,7 +203,8 @@
                       width: max-content;
                     <!--width: 200px;-->
                     padding-bottom: 10px;
-                    padding-left: 10px;
+                      padding-left: 10px; 
+                    padding-right: 10px;
                 }
                 #ExportWrapper {
                     position: relative;
@@ -228,7 +233,8 @@
                 .legend div {
                       width: max-content;
                     padding-bottom: 10px;
-                    padding-left: 10px;
+                     padding-left: 10px; 
+                    padding-right: 10px;
                 }
                 #ExportWrapper {
                     position: relative;
