--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -172,7 +172,7 @@
                     left: 160px;
                 }
                 .legend div {
-                      width: max-content;
+                      width: min-content;
                     padding-left: 10px; 
                     padding-right: 10px;
                 }
@@ -187,7 +187,7 @@
             }
             @media (max-width: 1700px) and (min-width: 800px) {
                 .legend div {
-                      width: max-content;
+                      width: min-content;
                     padding-bottom: 10px;
                       padding-left: 10px; 
                     padding-right: 10px;
@@ -200,7 +200,7 @@
             }
             @media (max-width: 800px) and (min-width: 598px) {
                 .legend div {
-                      width: max-content;
+                      width: min-content;
                     <!--width: 200px;-->
                     padding-bottom: 10px;
                       padding-left: 10px; 
@@ -231,7 +231,7 @@
                     min-width: 345px;
                 }
                 .legend div {
-                      width: max-content;
+                      width: min-content;
                     padding-bottom: 10px;
                      padding-left: 10px; 
                     padding-right: 10px;
