--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -172,9 +172,9 @@
                     left: 160px;
                 }
                 .legend div {
-                      width: min-content;
-                    padding-left: 10px; 
-                    padding-right: 10px;
+                      width: max-content;
+                    padding-left: 10px!important; 
+                    padding-right: 10px!important;
                 }
                 #ExportWrapper {
                     position: absolute;
@@ -187,10 +187,10 @@
             }
             @media (max-width: 1700px) and (min-width: 800px) {
                 .legend div {
-                      width: min-content;
+                      width: max-content;
                     padding-bottom: 10px;
-                      padding-left: 10px; 
-                    padding-right: 10px;
+                    padding-left: 10px!important; 
+                    padding-right: 10px!important;
                 }
                 #ExportWrapper {
                     position: absolute;
@@ -200,11 +200,11 @@
             }
             @media (max-width: 800px) and (min-width: 598px) {
                 .legend div {
-                      width: min-content;
+                      width: max-content;
                     <!--width: 200px;-->
                     padding-bottom: 10px;
-                      padding-left: 10px; 
-                    padding-right: 10px;
+                      padding-left: 10px!important; 
+                    padding-right: 10px!important;
                 }
                 #ExportWrapper {
                     position: relative;
@@ -231,7 +231,7 @@
                     min-width: 345px;
                 }
                 .legend div {
-                      width: min-content;
+                      width: max-content;
                     padding-bottom: 10px;
                      padding-left: 10px; 
                     padding-right: 10px;
