--- a/Consent_1.0.html
+++ b/Consent_1.0.html
@@ -583,7 +583,7 @@
 * Blood
 * Body Horror (Minor to Moderate)
 * Body Horror (Moderate to Severe)
-* Bodily Fluids (Excluding Blood) (Bile/Vomit, Spinal Fluid, Pus, Breast Milk, Sexual Fluids, etc)
+* Bodily Fluids (Excluding Blood) <Br>(Bile/Vomit, Spinal Fluid, Pus, Breast Milk, Sexual Fluids, etc)
 * Burning/Death by Fire
 * Cannibalism
 * Deep Water
