--- a/Consent_1.1.html
+++ b/Consent_1.1.html
@@ -577,7 +577,7 @@
 * Torture (Psychological)
 
 #Physical
-(General)
+(Giving, Receiving)
 * Acid
 * Being Eaten Alive (Vore)
 * Blood
@@ -615,7 +615,7 @@
 * Waterboarding
 
 #Phobias & External Factors
-(General)
+(Giving, Receiving)
 * Bugs and Insects (General)
 * Dolls/Puppets
 * Ghosts/Spirits
@@ -633,7 +633,7 @@
 * Voidsent
 
 #Disease & Health
-(General)
+(Giving, Receiving)
 * Alcohol Abuse/Addiction Issues                
 * Autoimmune diseases (General)/Chronic Disease
 * Cancer or similar diseases
@@ -1529,3 +1529,4 @@
         </script>
     </body>
 </html>
+
