--- a/Consent_1.1.html
+++ b/Consent_1.1.html
@@ -554,7 +554,7 @@
 * Killing another character
 
 #Mental 
-(Giving, Receiving, Test)
+(Giving, Receiving)
 * Amnesia/Memory Loss
 * Animalistic Behavior/Going "Feral"
 * Anxiety/Panic Attacks
@@ -1529,5 +1529,6 @@
         </script>
     </body>
 </html>
+
 
 
