--- a/Consent_1.1.html
+++ b/Consent_1.1.html
@@ -554,7 +554,7 @@
 * Killing another character
 
 #Mental 
-(Giving, Receiving)
+(Offering, Receiving)
 * Amnesia/Memory Loss
 * Animalistic Behavior/Going "Feral"
 * Anxiety/Panic Attacks
@@ -577,7 +577,7 @@
 * Torture (Psychological)
 
 #Physical
-(Giving, Receiving)
+(Offering, Receiving)
 * Acid
 * Being Eaten Alive (Vore)
 * Blood
@@ -615,7 +615,7 @@
 * Waterboarding
 
 #Phobias & External Factors
-(Giving, Receiving)
+(Offering, Receiving)
 * Bugs and Insects (General)
 * Dolls/Puppets
 * Ghosts/Spirits
@@ -633,7 +633,7 @@
 * Voidsent
 
 #Disease & Health
-(Giving, Receiving)
+(Offering, Receiving)
 * Alcohol Abuse/Addiction Issues                
 * Autoimmune diseases (General)/Chronic Disease
 * Cancer or similar diseases
@@ -1529,6 +1529,7 @@
         </script>
     </body>
 </html>
+
 
 
 
