--- a/Consent_1.1.html
+++ b/Consent_1.1.html
@@ -530,11 +530,11 @@
             <h1>Consent List</h1>
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
-                <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">I'm Okay With It</span></div>
-                <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">Hell Yeah, Let's Do It</span></div>
-                <div><span data-color="#FDFD6B" class="choice okay"></span> <span class="legend-text">Let's Be Careful/Negotiate</span></div>
-                <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">Fade To Black/Off Screen Okay</span></div>
-                <div><span data-color="#920000" class="choice no"></span> <span class="legend-text">Hard No</span></div>
+                <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">Hell Yes</span></div>
+                <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">Like</span></div>
+                <div><span data-color="#FDFD6B" class="choice okay"></span> <span class="legend-text">Okay</span></div>
+                <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">Maybe</span></div>
+                <div><span data-color="#920000" class="choice no"></span> <span class="legend-text">No</span></div>
             </div>
             <div id="ExportWrapper">
                 <input type="text" id="URL">
@@ -1529,6 +1529,7 @@
         </script>
     </body>
 </html>
+
 
 
 
