--- a/Consent_1.2.html
+++ b/Consent_1.2.html
@@ -585,8 +585,7 @@
     <body>
         <div class="widthWrapper">
             <button id="Edit"></button>
-            <h1>PlayList</h1>
-            <p>Your data is yours.</p>
+            <h1>RP Consent List</h1>
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
                 <div><span data-color="#FE6BB4" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
