--- a/Consent_1.2.html
+++ b/Consent_1.2.html
@@ -588,7 +588,7 @@
             <h1>RP Consent List</h1>
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
-                <div><span data-color="#FE6BB4" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
+                <div><span data-color="#add8e6" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
                 <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">Like</span></div>
                 <div><span data-color="#FDFD6B" class="choice okay"></span> <span class="legend-text">Okay</span></div>
                 <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">Maybe</span></div>
