--- a/Consent_1.3.html
+++ b/Consent_1.3.html
@@ -585,7 +585,7 @@
     <body>
         <div class="widthWrapper">
             <button id="Edit"></button>
-            <h1>RP Consent List</h1>
+            <h1>Sophos Eresia Consent List</h1>
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
                 <div><span data-color="#add8e6" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
@@ -599,7 +599,7 @@
             <div id="ExportWrapper">
                 <input type="text" id="URL">
                 <button id="Export">Download Image</button>
-                <div id="Loading">Loading</div>
+                <div id="Loading">Loading...</div>
             </div>
         </div>
         <div id="EditOverlay" class="overlay">
