--- a/Consent_1.3.html
+++ b/Consent_1.3.html
@@ -10,6 +10,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poiret+One&display=swap" rel="stylesheet">
         <style>
+
+            .poiret-one-regular {
+              font-family: "Poiret One", sans-serif;
+              font-weight: 400;
+              font-style: normal;
+            }
+
             body {
                 font-family: "Poiret One", sans-serif;
                 font-size: 12px;
