--- a/Consent_1.3.html
+++ b/Consent_1.3.html
@@ -13,9 +13,11 @@
 
             body {
                 font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+                  font-weight: 400;
+                  font-style: normal;
+                font-size: 12px;
             }
+            
             h2 {
                 padding: 0;
                 margin: 0;
