--- a/Consent_1.3.html
+++ b/Consent_1.3.html
@@ -125,6 +125,7 @@
             }
             .legend-text {
                 vertical-align: middle;
+                font-weight: 500;
             }
             
             #ExportWrapper {
