--- a/Consent_1.3.html
+++ b/Consent_1.3.html
@@ -13,7 +13,7 @@
 
             body {
                 font-family: "Montserrat Alternates", sans-serif;
-                  font-weight: 400;
+                  font-weight: 500;
                   font-style: normal;
                 font-size: 12px;
             }
@@ -125,7 +125,7 @@
             }
             .legend-text {
                 vertical-align: middle;
-                font-weight: 500;
+                font-weight: 600;
             }
             
             #ExportWrapper {
@@ -153,7 +153,7 @@
                 box-sizing: border-box;
                 color: #FFF;
                 text-transform: uppercase;
-                background-color: #4980ae;
+                background-color: #225188;
                 font-size: 18px;
                 width: 200px;
                 height: 36px;
