--- a/JUICEConsent_1.0.html
+++ b/JUICEConsent_1.0.html
@@ -19,6 +19,9 @@
             }
             
             h2 {
+                  font-family: "Kirang Haerang", system-ui;
+  font-weight: 400;
+  font-style: normal;
                 padding: 0;
                 margin: 0;
                 margin-top: 10px;
