--- a/JUICEConsent_1.0.html
+++ b/JUICEConsent_1.0.html
@@ -17,11 +17,14 @@
                   font-style: normal;
                 font-size: 12px;
             }
-            
-            h2 {
-                  font-family: "Kirang Haerang", system-ui;
-  font-weight: 400;
+               h1 {
+                     font-family: "Kirang Haerang", system-ui;
+  font-weight: 500;
   font-style: normal;
+                    margin-bottom: 0;
+                }
+            h2 {
+    
                 padding: 0;
                 margin: 0;
                 margin-top: 10px;
