--- a/JUICEConsent_1.0.html
+++ b/JUICEConsent_1.0.html
@@ -597,11 +597,12 @@
                 }
             }
 
-            .kirang-haerang-regular {
-  font-family: "Kirang Haerang", system-ui;
+       .bubblegum-sans-regular {
+  font-family: "Bubblegum Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
+
 
             
         </style>
