--- a/JUICEConsent_1.0.html
+++ b/JUICEConsent_1.0.html
@@ -21,6 +21,7 @@
                 font-family: "Bubblegum Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+                   font-size: 20px;
                 }
             
             h2 {
