--- a/JUICEConsent_1.0.html
+++ b/JUICEConsent_1.0.html
@@ -14,7 +14,8 @@
             body {
              font-family: "Lexend Deca", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+                font-size: 14px;
+  font-weight: 200;
   font-style: normal;
                 
             }
